--- a/backend/package.json
+++ b/backend/package.json
@@ -18,5 +18,9 @@
     "mongoose": "^5.12.5",
     "multer": "^1.4.2",
     "validator": "^13.6.0"
+  },
+  "devDependencies": {
+    "jest": "^27.0.6",
+    "supertest": "^6.1.3"
   }
 }
